test/langtools/tools/javac/valhalla/lworld-values/ValueModifierTest.out
ValueModifierTest.java:11:28: compiler.err.empty.value.not.yet
ValueModifierTest.java:14:16: compiler.err.empty.value.not.yet
ValueModifierTest.java:15:13: compiler.err.cant.inherit.from.final: value
ValueModifierTest.java:16:28: compiler.err.value.may.not.extend
ValueModifierTest.java:16:20: compiler.err.cant.inherit.from.final: value
5 errors
